// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`radioField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_bnlb220 uv_mxir930 uv_mxir932d uv_mxir935j"
      >
        <div
          aria-disabled="false"
          class="uv_bnlb224 uv_bnlb222"
          data-checked="false"
          data-invalid="false"
        >
          <input
            aria-disabled="false"
            class="uv_bnlb22a"
            id="_r_0_"
            name="test"
            type="radio"
            value="test"
          />
          <svg
            class="uv_bnlb22b"
            viewBox="0 0 24 24"
          >
            <title>
              radio
            </title>
            <g>
              <circle
                class="uv_bnlb22e"
                cx="12"
                cy="12"
                r="10"
                stroke-width="6"
              />
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="uv_bnlb22d"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="uv_bnlb22c"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
          <label
            class="uv_bnlb227 uv_bnlb225 uv_bnlb228 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
            for="_r_0_"
          >
            Radio field
          </label>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`radioField > should render correctly checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_bnlb220 uv_mxir930 uv_mxir932d uv_mxir935j"
      >
        <div
          aria-disabled="false"
          class="uv_bnlb224 uv_bnlb222"
          data-checked="true"
          data-invalid="false"
        >
          <input
            aria-disabled="false"
            checked=""
            class="uv_bnlb22a"
            id="_r_g_"
            name="test"
            type="radio"
            value="checked"
          />
          <svg
            class="uv_bnlb22b"
            viewBox="0 0 24 24"
          >
            <title>
              radio
            </title>
            <g>
              <circle
                class="uv_bnlb22e"
                cx="12"
                cy="12"
                r="10"
                stroke-width="6"
              />
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="uv_bnlb22d"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="uv_bnlb22c"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
          <label
            class="uv_bnlb227 uv_bnlb225 uv_bnlb228 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
            for="_r_g_"
          >
            Radio field checked
          </label>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`radioField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_bnlb220 uv_mxir930 uv_mxir932d uv_mxir935j"
      >
        <div
          aria-disabled="true"
          class="uv_bnlb224 uv_bnlb222"
          data-checked="false"
          data-invalid="false"
        >
          <input
            aria-disabled="true"
            class="uv_bnlb22a"
            disabled=""
            id="_r_a_"
            name="test"
            type="radio"
            value="disabled"
          />
          <svg
            class="uv_bnlb22b"
            viewBox="0 0 24 24"
          >
            <title>
              radio
            </title>
            <g>
              <circle
                class="uv_bnlb22e"
                cx="12"
                cy="12"
                r="10"
                stroke-width="6"
              />
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="uv_bnlb22d"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="uv_bnlb22c"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
          <label
            class="uv_bnlb227 uv_bnlb225 uv_bnlb228 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
            for="_r_a_"
          >
            Radio field disabled
          </label>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`radioField > should render correctly with aria-label 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_bnlb220 uv_mxir930 uv_mxir932d uv_mxir935j"
      >
        <div
          aria-disabled="false"
          class="uv_bnlb224 uv_bnlb222"
          data-checked="false"
          data-invalid="false"
        >
          <input
            aria-disabled="false"
            aria-label="Radio field"
            class="uv_bnlb22a"
            id="_r_6_"
            name="test"
            type="radio"
            value="test"
          />
          <svg
            class="uv_bnlb22b"
            viewBox="0 0 24 24"
          >
            <title>
              radio
            </title>
            <g>
              <circle
                class="uv_bnlb22e"
                cx="12"
                cy="12"
                r="10"
                stroke-width="6"
              />
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="uv_bnlb22d"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="uv_bnlb22c"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`radioField > should trigger events correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_bnlb220 uv_mxir930 uv_mxir932d uv_mxir935j"
      >
        <div
          aria-disabled="false"
          class="uv_bnlb224 uv_bnlb222"
          data-checked="true"
          data-invalid="false"
        >
          <input
            aria-disabled="false"
            class="uv_bnlb22a"
            id="_r_m_"
            name="test"
            type="radio"
            value="events"
          />
          <svg
            class="uv_bnlb22b"
            viewBox="0 0 24 24"
          >
            <title>
              radio
            </title>
            <g>
              <circle
                class="uv_bnlb22e"
                cx="12"
                cy="12"
                r="10"
                stroke-width="6"
              />
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="uv_bnlb22d"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="uv_bnlb22c"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
          <label
            class="uv_bnlb227 uv_bnlb225 uv_bnlb228 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
            for="_r_m_"
          >
            Radio field events
          </label>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
